--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -558,7 +558,7 @@ svg .progress {
     box-shadow: -5px 5px 22px #bdb5bf,
                 5px -5px 22px #ffffff;
     display: flex;
-    height: clamp(20em, 43vh, 100rem);
+    height: clamp(20em, 43vh, 200rem);
     margin: -2rem;
     overflow-x: auto;
     scroll-behavior: smooth;
@@ -570,7 +570,7 @@ svg .progress {
     width: clamp(10rem, 21vh, 30rem);;
 }
 
-.slider_Memorio .slider {
+.slider_draw .slider {
     width: clamp(10rem, 30vh, 30rem);;
 }
 
